Added games, database,user accounts and login,gameover screen with inserts and fixed some problems

--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -9,5 +9,4 @@
     android:shadowDy="3"
     android:shadowRadius="5"
     android:textColor="@color/white"
-    android:textSize="56sp"
-    android:onClick="onClick"/>
+    android:textSize="56sp" />
