--- a/app/src/main/res/layout/activity_show_scores.xml
+++ b/app/src/main/res/layout/activity_show_scores.xml
@@ -37,16 +37,62 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <TextView
+        android:id="@+id/score_comment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Choose what to search for: "
+        android:textColor="#807265"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_logo" />
+
+    <Spinner
+        android:id="@+id/spinnerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="#807265"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/score_comment"
+        app:layout_constraintTop_toTopOf="@+id/score_comment" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textColorHint="#eee4da"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toStartOf="@+id/searchButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/score_comment">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/search_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/cell_2"
+            android:hint="0"
+            android:textColorHint="#eee4da" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_marginEnd="48dp"
         android:layout_weight="1"
         android:background="@drawable/undo_bg"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/game_logo">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
         <TextView
             android:id="@+id/list_username"
@@ -56,6 +102,7 @@
             android:layout_margin="3dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:onClick="orderByName"
             android:text="USERNAME"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -70,6 +117,7 @@
             android:layout_marginEnd="64dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:onClick="orderByScore"
             android:text="SCORE"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -87,4 +135,22 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/table_bg"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="SEARCH"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/score_comment" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
